@@ -16,6 +16,7 @@ Version 1.1.8 work in progress
 - Bug #2338: Fixed a typo in the client validation code for CNumberValidator (Qiang)
 - Bug #2394: Fixed a typo in CDbCache that may cause mget() to fail (Qiang)
 - Bug #2409: Fixed the bug that CCaptcha::buttonOptions is not respected (Qiang)
+- Bug #2411: Fixed the bug that CCaptcha will fail when setting buttonType to be 'button' (Qiang)
 - Bug: CMapIterator current key wasn't initialized properly (Sam Dark, Detonator)
 - Bug: Controller generated with Gii CRUD wasn't able to handle non-integer primary key (Sam Dark)
 - Bug: Query caching may give incorrect caching results when bindParam or bindValue is used (Qiang)
